@@ -11,7 +11,8 @@ version 0.04:
 	- generate HTML version of all OpenConsole modules.
 	- move connection to Users and Assets to OwnerConsole.
 	- every object got an updated field.
-	- ajax session addInfo.
+	- ajax session addInfo and addGood.
+	- ::Util::datetime2dt()
 
 version 0.03: Sat 28 Sep 13:19:43 CEST 2024
 
